--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --main-color: rgb(3, 70, 148);
+  --main-color: rgb(3, 70, 148);
 }
 
 *,
@@ -12,6 +12,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -19,6 +20,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
+  
 }
 
 .navbar input[type="checkbox"],
@@ -76,170 +78,276 @@ body {
 }
 
 .d-flex {
-    display: flex;
+  display: flex;
 }
 
 .align-center {
-    align-items: center;
+  align-items: center;
 }
 
 h1 {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .hero {
-    background-image: url('./Chelsea\ 💙.jpg');
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: rgba(238, 36, 43, 0.157);
-    background-blend-mode: multiply;
-    height: 100vh;
-    color: #fff;
-    justify-content: center;
-    font-size: 2em;
-    text-align: center;
-    line-height: 2;
+  background-image: url("./images/Chelsea\ 💙.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgba(238, 36, 43, 0.157);
+  background-blend-mode: multiply;
+  height: 100vh;
+  color: #fff;
+  text-shadow: 0.5px 0.5px 3px black;
+  justify-content: center;
+  font-size: 2em;
+  text-align: center;
+  line-height: 2;
 }
 
 .call-to-action {
-    background-color: rgb(238, 36, 44);
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
-    color: white;
-    text-transform: uppercase;
+  background-color: rgb(238, 36, 44);
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+
+}
+.ctr h2{
+  text-align: center;
+  color: var(--main-color);
+  
+}
+.gallery a{
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  
+}
+.gallery{
+  width: 90;
+  margin: auto;
+  
+}
+.row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+}
+.row > .column {
+  padding: 0.8px;
+}
+.row > .column > img {
+  width: 100%;
+  border-radius: 8px;
+  min-height: 60%;
+  max-height: 80%;
+}
+.thumbnail{
+  grid-template-columns: repeat(10, 1fr);
 }
 
-.row > .column {
-    padding: 0 8px;
-  }
-  
-  .row:after {
+/* .row:after {
     content: "";
     display: table;
     clear: both;
   }
   
-  /* Create four equal columns that floats next to eachother */
+  /* Create four equal columns that floats next to eachother 
   .column {
     float: left;
     width: 25%;
-  }
-  
-  /* The Modal (background) */
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: black;
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    width: 90%;
-    max-width: 1200px;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: white;
-    position: absolute;
-    top: 10px;
-    right: 25px;
-    font-size: 35px;
-    font-weight: bold;
-    z-index: 1000;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #999;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  /* Hide the slides by default */
-  .mySlides {
-    display: none;
-  }
-  
-  /* Next & previous buttons */
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  /* Caption text */
-  .caption-container {
-    text-align: center;
-    background-color: black;
-    padding: 2px 16px;
-    color: white;
-  }
-  
-  img.demo {
-    opacity: 0.6;
-  }
-  
-  .active,
-  .demo:hover {
-    opacity: 1;
-  }
-  
-  img.hover-shadow {
-    transition: 0.3s;
-  }
-  
-  .hover-shadow:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
+  } */
 
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
 
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  position: absolute;
+  top: 8rem;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+  z-index: 1000;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Hide the slides by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Caption text */
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+img.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.about{
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+}
+.about > aside{
+background-color: var(--main-color);
+color: whitesmoke;
+padding: 20px;
+text-align: center;
+line-height: 2;
+}
+.about > aside > ul{
+  list-style-type: none;
+}
+.about > aside > ul> li a{
+  text-decoration: none;
+  color: whitesmoke;
+  display: inline-block;
+  padding: 10px;
+  border-bottom: 1px solid white;
+}
+.main{
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.5;
+  text-align: justify;
+  height: 50vh;
+  overflow-y: scroll;
+}
+.main section{
+  width: 90%;
+  margin: auto;
+  display: flow-root;
+}
+.fblock{
+  width: 20vw;
+  height: 20vw;
+  padding: 1rem;
+}
+.fblock img{
+  display: inline-block;
+  width: 90%;
+  height: 80%;
+  border-radius: 2.5px;
+}
+.right{
+  float: right;
+  margin-left: 1rem;
+  
+}
+.left{
+  float: left;
+  margin-right: 1rem;
+  
+}
+.fblock figcaption{
+  white-space: nowrap;
+  
+}
+.sbody{
+  min-height: 40vh;
+}
+footer{
+  background-color: var(--main-color);
+  color: whitesmoke;
+  text-align: center;
+  height:20vw;
+  padding-top: 20px;
+  line-height: 1.5;
+
+}
+footer a{
+  color: whitesmoke;
+}
+footer a:hover,footer a:focus{
+  color: aqua;
+}
 @media (max-width: 768px) {
   .navbar {
     opacity: 0.95;
